Fixing redis caching problem. Made search results more mobile friendly. Performance improvements.